<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/top_bg"
        android:padding="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/geotreasure"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chasse_aux_tr_sors"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"/>



    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="60dp">

         <!-- LANCER UNE PARTIE -->
            <LinearLayout
                android:id="@+id/linearLayout_main_play"
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_play_game"
                android:orientation="horizontal"
                android:padding="3dp"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/lancer_une_partie"
                        android:textColor="@color/home_text_color"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:text="@string/affiche_les_tr_sors_sur_la_carte"
                        android:textColor="@color/home_text_color" />
                </LinearLayout>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:contentDescription="@string/tresor"
                    android:padding="8dp"
                    android:src="@drawable/chest_home" />
            </LinearLayout>

        <!-- LEADERBOARDS -->
            <LinearLayout
                android:id="@+id/linearLayout_main_leaderboards"
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_show_leaderboards"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/classements"
                        android:textColor="@color/home_text_color"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:text="@string/affiche_les_meilleurs_joueurs"
                        android:textColor="@color/home_text_color" />
                </LinearLayout>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/trophe"
                    android:padding="8dp"
                    android:src="@drawable/trophy_home" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>